--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -127,29 +127,29 @@ $(document).ready(function () {
     }
 </style>
 <div id="calendar"></div>
-<table class="barattach-gray">
+<table class="barattach-gray margintop20">
     <tr>
         <td>
-            <label class="topicmargin-size67">Calendar Job</label>
+            <label class="topicmargin-size5">Calendar Job</label>
             @*<a href="/IncomeMaster/CreateIncomeMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="imgAdminCreate" /></a>*@
             <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
     </tr>
 </table>
-
-<table id="tblcalenJob" class="table tbgray table-striped-gray scrolling">
-    <thead class="bgthead-gray">
-        <tr>
-            <th class="thgray Rowpointer">No.</th>
-            <th class="thgray hidecolumn Rowpointer">ID</th>
-            <th class="thgray Rowpointer">JobNo</th>
-            <th class="thgray hideANDseek Rowpointer">Type of Working</th>
-            <th class="thgray hideANDseek Rowpointer">JobDate</th>
-            <th class="thgray Rowpointer">Start Working</th>
-            <th class="thgray Rowpointer">End Working</th>
-            <th class="thgray"></th>
-        </tr>
-    </thead>
-    <tbody id="result"></tbody>
-</table>
-
+<div class="table-responsive">
+    <table id="tblcalenJob" class="table tbgray table-striped-gray scrolling">
+        <thead class="bgthead-gray">
+            <tr>
+                <th class="thgray Rowpointer">No.</th>
+                <th class="thgray hidecolumn Rowpointer">ID</th>
+                <th class="thgray Rowpointer">JobNo</th>
+                <th class="thgray hideANDseek Rowpointer">Type of Working</th>
+                <th class="thgray hideANDseek Rowpointer">JobDate</th>
+                <th class="thgray Rowpointer">Start Working</th>
+                <th class="thgray Rowpointer">End Working</th>
+                <th class="thgray"></th>
+            </tr>
+        </thead>
+        <tbody id="result"></tbody>
+    </table>
+</div>
