--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -23,86 +23,110 @@
     {
         //===================================================================CSS w3school
         <form>
-            <ul class="form-style-1">
-                <li>
-                    <label class="label-2" style="margin-right: 25%;">Serial Number <span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;">หมายเลขเครื่อง</label>
-                </li>
-                <li>
-                    <input type="text" id="txtSerialNo" name="field1" class="field-divided" placeholder="" autofocus required />&nbsp;<input type="text" id="txtMachineNo" name="field1" class="field-divided" required />
-                </li>
-                <li>
-                    <label>ประเภทสินค้า</label>
-                    <select id="cmbProductType" name="cmbProductType" class="field-divided"></select>
-                </li>
-                <li>
-                    <label class="label-2" style="margin-right: 42%;">ยี่ห้อ</label>&nbsp;<label class="label-2">ขนาด</label>
-                </li>
-                <li>
-                    <input type="text" id="txtBrand" name="field1" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtSize" name="field2" class="field-select-small text-size160"  />
-                </li>
-                <li>
-                    <label class="label-2" style="margin-right: 45%;">รุ่น</label>&nbsp;<label class="label-2">อายุใช้งาน</label>
-                </li>
-                <li>
-                    <input type="text" id="txtModel" name="field2" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtLifetime" name="field2" class="field-select-small" style="width:10%;"  />&nbsp;<label class="label-3">ปี</label>
-                </li>
-                <li>
-                    <label class="label-big">รับเข้า&nbsp;</label><label class="label-small">หน่วยนับ</label>
-                </li>
-                <li>
-                    <input type="text" id="dtReceiveDate" class="field-divided"  required/>&nbsp;<select id="cmbUnitWeight" name="cmbUnitWeight" class="field-select-small-2"></select>
-                </li>
-                <li>
-                    <label class="label-small">ยกมา<span class="required">*</span></label>&nbsp;<label class="label-small-3">คงเหลือ<span class="required">*</span></label>
-                </li>
-                <li>
-                    <input type="text" id="txtBalance" name="field1" class="field-select-small" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 46" style="text-align:right;"  required/>&nbsp;<input type="text" id="txtRemain" name="field2" class="field-select-small" style="text-align:right;"  required disabled />
-                </li>
-                <li>
-                    <label class="label-small-2">หาย</label>&nbsp;<label class="label-small-2">ซ่อม</label>&nbsp;<label class="label-small-2">ชำรุด</label>
-                </li>
-                <li>
-                    <input type="text" id="txtLost" name="field6" class="field-select-small" style="text-align:right;"  disabled />&nbsp;<input type="text" id="txtRepair" name="field7" class="field-select-small" style="text-align:right;" disabled />&nbsp;<input type="text" id="txtBreak" name="field8" style="text-align:right;" class="field-select-small"  disabled />
-                </li>
-            </ul>
-            <ul class="form-style-1">
-                <li>
-                    <input type="file" name="photo" id="photo" onchange="readURL(this);" style="color:transparent;">
-                    <div class="imgpreview"><img id="imgPreview" alt="your image" class="img-responsive" /></div>
-                    <input type="hidden" id="hidFilePath" />
-                    <input type="hidden" id="hidProductFileID" />
-                    <input type="hidden" id="hidAttachPath" />
-                </li>
-                <li>
-                    <label>รายละเอียด</label>
-                    <textarea name="field5" id="txtDiscription" class="field-long field-textarea"></textarea>
-                </li>
-                <li>
-                    <label>หมายเหตุ</label>
-                    <textarea name="field5" id="txtRemark" class="field-long field-textarea"></textarea>
-                </li>
-                <li>
-                    <button type="button" id="btnSave" class="btn btn-primary" onclick="validate()">Save</button>
-                </li>
-            </ul>
-            <ul class="attachgrid">
-                <li>
-                    <input type="file" id="FileUpload1" multiple />
-                    <table class="example-2" cellspacing="0">
-                        <thead class="theader">
-                            <tr>
-                                <th>No.</th>
-                                <th>File Name</th>
-                                <th class="hidecolumn">Path Name</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody id="result"></tbody>
-                    </table>
-                </li>
-                <br />
-            </ul>
-        </form>
+            <input type="hidden" id="hidFilePath" />
+            <input type="hidden" id="hidProductFileID" />
+            <input type="hidden" id="hidAttachPath" />
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-4 col-sm-3 col-lg-2">
+                        <div class="form-group">
+                            <label for="txtSerialNo">Serial Number:<span class="required">*</span></label>
+                            <input type="text" id="txtSerialNo" class="form-control" placeholder="" autofocus required />
+                        </div>
+                    </div>
+                    <div class="col-xs-4 col-sm-3 col-lg-2">
+                        <div class="form-group">
+                            <label for="txtMachineNo">หมายเลขเครื่อง:</label>
+                            <input type="text" id="txtMachineNo" class="form-control" placeholder="" autofocus required />
+                            <input type="hidden" id="hidProductID" />
+                        </div>
+                    </div>
+                    <div class="col-xs-4 col-sm-3 col-lg-2">
+                        <div class="form-group">
+                            <label for="dtReceiveDate">รับเข้า:</label>
+                            <input type="text" id="dtReceiveDate" class="form-control" placeholder="" required />
+                        </div>
+                    </div>
+                </div>
+            </div>
+                <ul class="form-style-1">
+                    @*<li>
+                        <label class="label-2" style="margin-right: 25%;">Serial Number <span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;">หมายเลขเครื่อง</label>
+                    </li>*@
+                    @*<li>
+                        <input type="text" id="txtSerialNo" name="field1" class="field-divided" placeholder="" autofocus required />&nbsp;<input type="text" id="txtMachineNo" name="field1" class="field-divided" required />
+                    </li>*@
+                    <li>
+                        <label>ประเภทสินค้า</label>
+                        <select id="cmbProductType" name="cmbProductType" class="field-divided"></select>
+                    </li>
+                    <li>
+                        <label class="label-2" style="margin-right: 42%;">ยี่ห้อ</label>&nbsp;<label class="label-2">ขนาด</label>
+                    </li>
+                    <li>
+                        <input type="text" id="txtBrand" name="field1" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtSize" name="field2" class="field-select-small text-size160" />
+                    </li>
+                    <li>
+                        <label class="label-2" style="margin-right: 45%;">รุ่น</label>&nbsp;<label class="label-2">อายุใช้งาน</label>
+                    </li>
+                    <li>
+                        <input type="text" id="txtModel" name="field2" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtLifetime" name="field2" class="field-select-small" style="width:10%;" />&nbsp;<label class="label-3">ปี</label>
+                    </li>
+                    <li>
+                        <label class="label-small">หน่วยนับ</label>
+                    </li>
+                    <li>
+                       <select id="cmbUnitWeight" name="cmbUnitWeight" class="field-select-small-2"></select>
+                    </li>
+                    <li>
+                        <label class="label-small">ยกมา<span class="required">*</span></label>&nbsp;<label class="label-small-3">คงเหลือ<span class="required">*</span></label>
+                    </li>
+                    <li>
+                        <input type="text" id="txtBalance" name="field1" class="field-select-small" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 46" style="text-align:right;" required />&nbsp;<input type="text" id="txtRemain" name="field2" class="field-select-small" style="text-align:right;" required disabled />
+                    </li>
+                    <li>
+                        <label class="label-small-2">หาย</label>&nbsp;<label class="label-small-2">ซ่อม</label>&nbsp;<label class="label-small-2">ชำรุด</label>
+                    </li>
+                    <li>
+                        <input type="text" id="txtLost" name="field6" class="field-select-small" style="text-align:right;" disabled />&nbsp;<input type="text" id="txtRepair" name="field7" class="field-select-small" style="text-align:right;" disabled />&nbsp;<input type="text" id="txtBreak" name="field8" style="text-align:right;" class="field-select-small" disabled />
+                    </li>
+                </ul>
+                <ul class="form-style-1">
+                    <li>
+                        <input type="file" name="photo" id="photo" onchange="readURL(this);" style="color:transparent;">
+                        <div class="imgpreview"><img id="imgPreview" alt="your image" class="img-responsive" /></div>
+
+                    </li>
+                    <li>
+                        <label>รายละเอียด</label>
+                        <textarea name="field5" id="txtDiscription" class="field-long field-textarea"></textarea>
+                    </li>
+                    <li>
+                        <label>หมายเหตุ</label>
+                        <textarea name="field5" id="txtRemark" class="field-long field-textarea"></textarea>
+                    </li>
+                    <li>
+                        <button type="button" id="btnSave" class="btn btn-primary" onclick="validate()">Save</button>
+                    </li>
+                </ul>
+                <ul class="attachgrid">
+                    <li>
+                        <input type="file" id="FileUpload1" multiple />
+                        <table class="example-2" cellspacing="0">
+                            <thead class="theader">
+                                <tr>
+                                    <th>No.</th>
+                                    <th>File Name</th>
+                                    <th class="hidecolumn">Path Name</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody id="result"></tbody>
+                        </table>
+                    </li>
+                    <br />
+                </ul>
+</form>
         //===================================================================CSS w3school
     }
 </div>
