--- a/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
@@ -39,7 +39,7 @@
                 </li>
                 <br />
             </ul>
-            <div class="grigbar">
+            <div class="table-responsive">
                 <table id="tblWageTechnician" class="table table-striped">
                     <thead class="bgthead">
                         <tr>
