--- a/Alpha/AlphaMvc/Content/custom.css
+++ b/Alpha/AlphaMvc/Content/custom.css
@@ -20,12 +20,36 @@
  */
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
+.cmbsize106
+{
+   width: 106% !important;
+   padding: 6px !important;
+}
+.txtareasize106
+{
+    width: 106% !important;
+}
+.txtsize80
+{
+    width: 80px !important;
+}
+.txtpadding
+{
+     padding: 5px;
+     margin-bottom: 10px;
+}
 .menulocation
 {
     padding-top: 8%;
     padding-left: 13%;
 }
 @media (max-width: 680px) {
+    .txtpadding
+{
+     padding: 5px;
+     margin-bottom: 10px;
+     width:120px;
+}
     .menulocation {
         padding-top: 8%;
         padding-left: 0%;
@@ -1805,8 +1829,17 @@ table th[class*="col-"] {
   background-color: #faf2cc;
   border-color: #f8e5be;
 }
-
+@media (max-width: 970px) {
+        .menulocation {
+        padding-top: 11%;
+        padding-left: 1%;
+    }
+}
 @media (max-width: 768px) {
+    .menulocation {
+    padding-top: 11%;
+    padding-left: 1%;
+}
   .table-responsive {
     width: 100%;
     margin-bottom: 15px;
@@ -1941,15 +1974,18 @@ input[type="number"]::-webkit-inner-spin-button {
 .form-control {
   display: block;
   width: 100%;
-  height: 34px;
-  padding: 6px 12px;
+  /*height: 34px;
+  padding: 6px 12px;*/
+  padding:5px;
   font-size: 14px;
   line-height: 1.428571429;
   color: #555555;
   vertical-align: middle;
   background-color: #ffffff;
-  border: 1px solid #cccccc;
-  border-radius: 4px;
+  /*border: 1px solid #cccccc;
+  border-radius: 4px;*/
+      border: 1px solid #a9a9a9;
+    border-radius: 1px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
@@ -3621,6 +3657,240 @@ input[type="button"].btn-block {
   display: block;
 }
 /*==================================================dropdown-menulightblue*/
+.dropdown-menulightnavyblue {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 160px;
+  padding: 0px 0;
+  margin: 0px 0 0;
+  font-size: 14px;
+  list-style: none;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+          box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  background-clip: padding-box;
+}
+
+.dropdown-menulightnavyblue.pull-right {
+  right: 0;
+  left: auto;
+}
+
+.dropdown-menulightnavyblue .divider {
+  height: 1px;
+  margin: 9px 0;
+  overflow: hidden;
+  background-color: #e5e5e5;
+}
+
+.dropdown-menulightnavyblue > li > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.428571429;
+  color: #333333;
+  white-space: nowrap;
+}
+
+.dropdown-menulightnavyblue > li > a:hover,
+.dropdown-menulightnavyblue > li > a:focus {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: rgba(52,80,128,0.4);
+}
+
+.dropdown-menulightnavyblue > .active > a,
+.dropdown-menulightnavyblue > .active > a:hover,
+.dropdown-menulightnavyblue > .active > a:focus {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #428bca;
+  outline: 0;
+}
+
+.dropdown-menulightnavyblue > .disabled > a,
+.dropdown-menulightnavyblue > .disabled > a:hover,
+.dropdown-menulightnavyblue > .disabled > a:focus {
+  color: #999999;
+}
+
+.dropdown-menulightnavyblue > .disabled > a:hover,
+.dropdown-menulightnavyblue > .disabled > a:focus {
+  text-decoration: none;
+  cursor: not-allowed;
+  background-color: transparent;
+  background-image: none;
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+}
+
+.open > .dropdown-menulightnavyblue {
+  display: block;
+}
+/*==================================================dropdown-menulightnavyblue*/
+.dropdown-menulightpuple {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 160px;
+  padding: 0px 0;
+  margin: 0px 0 0;
+  font-size: 14px;
+  list-style: none;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+          box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  background-clip: padding-box;
+}
+
+.dropdown-menulightpuple.pull-right {
+  right: 0;
+  left: auto;
+}
+
+.dropdown-menulightpuple .divider {
+  height: 1px;
+  margin: 9px 0;
+  overflow: hidden;
+  background-color: #e5e5e5;
+}
+
+.dropdown-menulightpuple > li > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.428571429;
+  color: #333333;
+  white-space: nowrap;
+}
+
+.dropdown-menulightpuple > li > a:hover,
+.dropdown-menulightpuple > li > a:focus {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: rgba(91,22,117,0.4);
+}
+
+.dropdown-menulightpuple > .active > a,
+.dropdown-menulightpuple > .active > a:hover,
+.dropdown-menulightpuple > .active > a:focus {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #428bca;
+  outline: 0;
+}
+
+.dropdown-menulightpuple > .disabled > a,
+.dropdown-menulightpuple > .disabled > a:hover,
+.dropdown-menulightpuple > .disabled > a:focus {
+  color: #999999;
+}
+
+.dropdown-menulightpuple > .disabled > a:hover,
+.dropdown-menulightpuple > .disabled > a:focus {
+  text-decoration: none;
+  cursor: not-allowed;
+  background-color: transparent;
+  background-image: none;
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+}
+
+.open > .dropdown-menulightpuple {
+  display: block;
+}
+/*==================================================dropdown-menulightpuple*/
+.dropdown-menulightpink {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 160px;
+  padding: 0px 0;
+  margin: 0px 0 0;
+  font-size: 14px;
+  list-style: none;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+          box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  background-clip: padding-box;
+}
+
+.dropdown-menulightpink.pull-right {
+  right: 0;
+  left: auto;
+}
+
+.dropdown-menulightpink .divider {
+  height: 1px;
+  margin: 9px 0;
+  overflow: hidden;
+  background-color: #e5e5e5;
+}
+
+.dropdown-menulightpink > li > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.428571429;
+  color: #333333;
+  white-space: nowrap;
+}
+
+.dropdown-menulightpink > li > a:hover,
+.dropdown-menulightpink > li > a:focus {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: rgba(171,55,106,0.4);
+}
+
+.dropdown-menulightpink > .active > a,
+.dropdown-menulightpink > .active > a:hover,
+.dropdown-menulightpink > .active > a:focus {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #428bca;
+  outline: 0;
+}
+
+.dropdown-menulightpink > .disabled > a,
+.dropdown-menulightpink > .disabled > a:hover,
+.dropdown-menulightpink > .disabled > a:focus {
+  color: #999999;
+}
+
+.dropdown-menulightpink > .disabled > a:hover,
+.dropdown-menulightpink > .disabled > a:focus {
+  text-decoration: none;
+  cursor: not-allowed;
+  background-color: transparent;
+  background-image: none;
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+}
+
+.open > .dropdown-menulightpink {
+  display: block;
+}
+/*==================================================dropdown-menulightpuple*/
 .open > a {
   outline: 0;
 }
@@ -4587,6 +4857,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
   .navbar-nav .open .dropdown-menu > li > a:focus {
     background-image: none;
   }
+  .dropdown-menu > li > a:hover,
+  .dropdown-menu > li > a:focus {
+    color: #ffffff !important;
+    text-decoration: none;
+    background-color: rgba(92,92,92,0.4) !important;
+  }
 /*============================================================== menulightblue*/
 .navbar-nav .open .dropdown-menulightblue {
     position: static;
@@ -4615,6 +4891,87 @@ textarea.input-group-sm > .input-group-btn > .btn {
     background-color: rgba(75,116,144,0.4);
   }
 /*============================================================== menulightblue*/
+.navbar-nav .open .dropdown-menulightnavyblue {
+    position: static;
+    float: none;
+    width: auto;
+    margin-top: 0;
+    background-color: transparent;
+    border: 0;
+    box-shadow: none;
+  }
+  .navbar-nav .open .dropdown-menulightnavyblue > li > a,
+  .navbar-nav .open .dropdown-menulightnavyblue .dropdown-header {
+    padding: 5px 15px 5px 25px;
+  }
+  .navbar-nav .open .dropdown-menulightnavyblue > li > a {
+    line-height: 20px;
+  }
+  .navbar-nav .open .dropdown-menulightnavyblue > li > a:hover,
+  .navbar-nav .open .dropdown-menulightnavyblue > li > a:focus {
+    background-image: none;
+  }
+  .dropdown-menulightnavyblue > li > a:hover,
+  .dropdown-menulightnavyblue > li > a:focus {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: rgba(52,80,128,0.4);
+  }
+/*============================================================== menulightnavyblue*/
+.navbar-nav .open .dropdown-menulightpuple {
+    position: static;
+    float: none;
+    width: auto;
+    margin-top: 0;
+    background-color: transparent;
+    border: 0;
+    box-shadow: none;
+  }
+  .navbar-nav .open .dropdown-menulightpuple > li > a,
+  .navbar-nav .open .dropdown-menulightpuple .dropdown-header {
+    padding: 5px 15px 5px 25px;
+  }
+  .navbar-nav .open .dropdown-menulightpuple > li > a {
+    line-height: 20px;
+  }
+  .navbar-nav .open .dropdown-menulightpuple > li > a:hover,
+  .navbar-nav .open .dropdown-menulightpuple > li > a:focus {
+    background-image: none;
+  }
+  .dropdown-menulightpuple > li > a:hover,
+  .dropdown-menulightpuple > li > a:focus {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: rgba(91,22,117,0.4);
+  }
+/*============================================================== menulightpuple*/
+.navbar-nav .open .dropdown-menulightpink{
+    position: static;
+    float: none;
+    width: auto;
+    margin-top: 0;
+    background-color: transparent;
+    border: 0;
+    box-shadow: none;
+  }
+  .navbar-nav .open .dropdown-menulightpink > li > a,
+  .navbar-nav .open .dropdown-menulightpink .dropdown-header {
+    padding: 5px 15px 5px 25px;
+  }
+  .navbar-nav .open .dropdown-menulightpink > li > a {
+    line-height: 20px;
+  }
+  .navbar-nav .open .dropdown-menulightpink > li > a:hover,
+  .navbar-nav .open .dropdown-menulightpink > li > a:focus {
+    background-image: none;
+  }
+  .dropdown-menulightpink > li > a:hover,
+  .dropdown-menulightpink > li > a:focus {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: rgba(171,55,106,0.4);
+  }
+/*============================================================== menulightpink*/
     
     .menublue {
         background: #5c5c5c !important;
@@ -4651,6 +5008,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   .navbar-nav {
     float: left;
     margin: 0;
+    display: -webkit-box;
   }
   .navbar-nav > li {
     float: left;
@@ -4760,7 +5118,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-default {
-  background-color: #f8f8f8;
+  background-color: #ece9cd;
   border-color: #e7e7e7;
 }
 
@@ -6435,7 +6793,7 @@ body.modal-open,
       text-decoration: none;
       display: inline-block;
       padding: 1px 7px;
-      background: #db6144;
+      background: #9fa694;
       /*background: #91b9e6;*/
       color: white;
       border-radius: 3px;
@@ -7660,7 +8018,7 @@ td.visible-print {
 .btn-info-Search {
   color: #ffffff;
   background-color: #ffcabe;
-  border-color: #db6144;
+  border-color: #9fa694;
   height: 35px;
   width: 85px;
   margin-top: 20px;
