--- a/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
@@ -201,32 +201,33 @@
 </style>
 
 <div id="calendar"></div>
-<table class="barattach-2">
+<table class="barattach-gray margintop20">
     <tr>
         <td>
-            <label class="topicmargin-size67">Calendar Manpower</label>
+            <label class="topicmargin-size5">Calendar Manpower</label>
             @*<a href="/IncomeMaster/CreateIncomeMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="imgAdminCreate" /></a>*@
             <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
     </tr>
 </table>
-<table id="tblcalenCMP" class="table table-striped scrolling">
-    <thead class="bgthead">
-        <tr>
-            <th class="thgray Rowpointer">No.</th>
-            <th class="thgray hidecolumn Rowpointer">ID</th>
-            <th class="thgray Rowpointer">Name</th>
-            <th class="thgray hideANDseek Rowpointer">Position</th>
-            <th class="thgray hideANDseek Rowpointer">Type</th>
-            <th class="thgray Rowpointer">JobNo</th>
-            <th class="thgray hideANDseek Rowpointer">Type of Working</th>
-            <th class="thgray hideANDseek Rowpointer">JobDate</th>
-            <th class="thgray Rowpointer">Start Working</th>
-            <th class="thgray Rowpointer">End Working</th>
-            <th class="thgray"></th>
-        </tr>
-    </thead>
-    <tbody id="result"></tbody>
-</table>
-
+<div class="table-responsive">
+    <table id="tblcalenCMP" class="table table-striped scrolling">
+        <thead class="bgthead">
+            <tr>
+                <th class="thgray Rowpointer">No.</th>
+                <th class="thgray hidecolumn Rowpointer">ID</th>
+                <th class="thgray Rowpointer">Name</th>
+                <th class="thgray hideANDseek Rowpointer">Position</th>
+                <th class="thgray hideANDseek Rowpointer">Type</th>
+                <th class="thgray Rowpointer">JobNo</th>
+                <th class="thgray hideANDseek Rowpointer">Type of Working</th>
+                <th class="thgray hideANDseek Rowpointer">JobDate</th>
+                <th class="thgray Rowpointer">Start Working</th>
+                <th class="thgray Rowpointer">End Working</th>
+                <th class="thgray"></th>
+            </tr>
+        </thead>
+        <tbody id="result"></tbody>
+    </table>
+</div>
 
