--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -29,101 +29,155 @@
     @using (Html.BeginForm())
     {
         //===================================================================CSS w3school
-        <form id="myform">
-            <ul class="form-style-1">
-                <li>
-                    <label class="label-2" style="margin-right: 25%;">Serial Number <span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;">หมายเลขเครื่อง</label>
-                    <input type="hidden" id="hidProductID" />
-                </li>
-                <li>
-                    <input type="text" id = "txtSerialNo" name="field_1" class="field-divided" placeholder="Serial" autofocus required />&nbsp;<input type="text" id = "txtMachineNo" name="field1" class="field-divided" placeholder="" required />
-                </li>
-                <li>
-                    <label>ประเภทสินค้า</label>
-                    <select id="cmbProductType" name="cmbProductType" class="field-divided" >
-                    </select>
-                    @*onchange="cmbProductType_Change()"*@
-                </li>
-                <li>
-                    <label class="label-2" style="margin-right: 42%;">ยี่ห้อ</label>&nbsp;<label class="label-2">ขนาด</label>
-                </li>
-                <li>
-                    <input type="text" id = "txtBrand" name="field1" class="field-divided" placeholder="" />&nbsp;<input type="text" id = "txtSize" name="field2" class="field-select-small text-size160" placeholder="" />
-                </li>
-                <li>
-                    <label class="label-2" style="margin-right: 45%;">รุ่น</label>&nbsp;<label class="label-2">อายุใช้งาน</label>
-                </li>
-                <li>
-                    <input type="text" id = "txtModel" name="field2" class="field-divided" placeholder="" />&nbsp;<input type="text" id = "txtLifetime" name="field2" class="field-select-small" style="width:10%;" placeholder="" />&nbsp;<label class="label-3">ปี</label>
-                </li>
-                <li>
-                    <label class="label-big">รับเข้า</label>&nbsp;<label class="label-small">หน่วยนับ</label>
-                </li>
-                <li>
-                    <input type="text" id = "dtReceiveDate" class="field-divided" placeholder="" required />&nbsp;
-                    <select id="cmbUnitWeight" name="cmbUnitWeight" class="field-select-small-2" style="margin-left: -3px;">
-                    </select>
-                    @*onchange="cmbUnitWeight_Change()"*@
-                </li>
-                <li>
-                    <label class="label-small">ยกมา<span class="required">*</span></label>&nbsp;<label class="label-small-3">คงเหลือ<span class="required">*</span></label>
-                </li>
-                <li>
-                    <input type="number" id = "txtBalance" name="field1" class="field-select-small" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 46" placeholder="" onblur="GetRemain()" required />&nbsp;<input type="number" id = "txtRemain" name="field2" class="field-select-small" placeholder="" required disabled/>
-                </li>
-                <li>
-                    <label class="label-small-2">หาย</label>&nbsp;<label class="label-small-2">ซ่อม</label>&nbsp;<label class="label-small-2">ชำรุด</label>
-                </li>
-                <li>
-                    <input type="text" id = "txtLost" name="field6" class="field-select-small" placeholder="" disabled />&nbsp;<input type="text" id = "txtRepair" name="field7" class="field-select-small" placeholder="" disabled />&nbsp;<input type="text" id = "txtBreak" name="field8" class="field-select-small" placeholder="" disabled />
-                </li>
-            </ul>
-            <ul class="form-style-1">
-                <li>
+        
+            <form id="myform">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-xs-4 col-sm-3 col-lg-2">
+                            <div class="form-group">
+                                <label for="txtSerialNo">Serial Number:<span class="required">*</span></label>
+                                <input type="text" id="txtSerialNo" class="form-control" placeholder="" autofocus required />
+                            </div>
+                        </div>
+                        <div class="col-xs-4 col-sm-3 col-lg-2">
+                            <div class="form-group">
+                                <label for="txtMachineNo">หมายเลขเครื่อง:</label>
+                                <input type="text" id="txtMachineNo" class="form-control" placeholder="" autofocus required />
+                                <input type="hidden" id="hidProductID" />
+                            </div>
+                        </div>
+                        <div class="col-xs-4 col-sm-3 col-lg-2">
+                            <div class="form-group">
+                                <label for="dtReceiveDate">รับเข้า:</label>
+                                <input type="text" id="dtReceiveDate" class="form-control" placeholder="" required />
+                            </div>
+                        </div>
+                    </div>
 
-                    <input type="file" name="photo" id="photo" onchange="readURL(this);" style="color:transparent;">
-                    <div class="imgpreview"><img id="imgPreview" alt="your image" class="img-responsive" /></div>
-                    
-                </li>
-                <li>
-                    <label>รายละเอียด</label>
-                    <textarea name="field5" id="txtDiscription" class="field-long field-textarea"></textarea>
-                </li>
-                <li>
-                    <label>หมายเหตุ</label>
-                    <textarea name="field5" id = "txtRemark" class="field-long field-textarea"></textarea>
-                </li>
-                <li>
-                    <button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'Products', 0)">Save</button>
-                </li>
-            </ul>
-            <ul class="attachgrid">
-                <li>
-                    <input type="file" id="FileUpload1" multiple />
-                    <table class="example-2" cellspacing="0">
-                        <thead class="theader">
-                            <tr>
-                                <th>No.</th>
-                                <th>File Name</th>
-                                <th class="hidecolumn">Path Name</th>
-                            </tr>
-                        </thead>
-                    </table>
-                    @*<table class="barattach">
-                        <tr>
-                            <td>                             
-                                <div class="topicattach"><a href="#"><img src="@Url.Content("~/Images/attachments2.png")" /></a></div>
-                            </td>
-                        </tr>
-                    </table>
-                    <input type="file" id="FileUpload1" multiple />
-                    <input type="button" id="btnUpload" value="Upload Files" />*@  
-                </li>
-            </ul>      
+                    <div class="row">
+                        <div class="col-xs-4 col-sm-3 col-lg-2">
+                            <div class="form-group">
+                                <label for="cmbProductType">ประเภทสินค้า:</label>
+                                <select id="cmbProductType" name="cmbProductType" class="form-control cmbsize106"></select>
+                            </div>
+                        </div>
+                        <div class="col-xs-4 col-sm-3 col-lg-2">
+                            <div class="form-group">
+                                <label for="txtBrand">ยี่ห้อ:</label>
+                                <input type="text" id="txtBrand" class="form-control" placeholder="" />
+                            </div>
+                        </div>
+                            <div class="col-xs-4 col-sm-3 col-lg-1">
+                                <div class="form-group">
+                                    <label for="txtBalance">ยกมา:<span class="required">*</span></label>
+                                    <input type="number" id="txtBalance" class="form-control txtsize80" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 46" placeholder="" onblur="GetRemain()" required />
+                                </div>
+                            </div>
+                            <div class="col-xs-4 col-sm-3 col-lg-1">
+                                <div class="form-group">
+                                    <label for="txtRemain">คงเหลือ:<span class="required">*</span></label>
+                                    <input type="number" id="txtRemain" class="form-control txtsize80" placeholder="" required disabled />
+                                </div>
+                            </div>
+                        </div>
+                    <div class="row">
+                        <div class="col-xs-4 col-sm-3 col-lg-2">
+                            <div class="form-group">
+                                <label for="txtSize">ขนาด:</label>
+                                <input type="text" id="txtSize" name="field2" class="form-control " placeholder="" />
+                            </div>
+                        </div>
+                        <div class="col-xs-4 col-sm-3 col-lg-2">
+                            <div class="form-group">
+                                <label for="cmbUnitWeight">หน่วยนับ:</label>
+                                <select id="cmbUnitWeight" class="form-control cmbsize106"></select>
+                            </div>
+                        </div>
+                        <div class="col-xs-4 col-sm-3 col-lg-1">
+                            <div class="form-group">
+                                <label for="txtLost">หาย:</label>
+                                <input type="text" id="txtLost" class="form-control txtsize80" placeholder="" disabled />
+                            </div>
+                        </div>
+                        <div class="col-xs-4 col-sm-3 col-lg-1">
+                            <div class="form-group">
+                                <label for="txtRepair">ซ่อม:</label>
+                                <input type="text" id="txtRepair" class="form-control txtsize80" placeholder="" disabled />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-4 col-sm-3 col-lg-2">
+                            <div class="form-group">
+                                <label for="txtModel">รุ่น:</label>
+                                <input type="text" id="txtModel" class="form-control" placeholder="" />
+                            </div>
+                        </div>
+                        <div class="col-xs-4 col-sm-3 col-lg-2">
+                            <div class="form-group">
+                                <label for="txtLifetime">อายุใช้งาน (ปี):</label>
+                                <input type="text" id="txtLifetime" class="form-control" placeholder="" />
+                            </div>
+                        </div>
+                        <div class="col-xs-4 col-sm-3 col-lg-2">
+                            <div class="form-group">
+                                <label for="txtBreak">ชำรุด:</label>
+                                <input type="text" id="txtBreak" class="form-control txtsize80" placeholder="" disabled />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-4 col-sm-3 col-lg-2">
+                            <div class="form-group">
+                                <label for="txtDiscription">รายละเอียด:</label>
+                                <textarea id="txtDiscription" class="form-control txtareasize106"></textarea>
+                            </div>
+                        </div>
+                        <div class="col-xs-4 col-sm-3 col-lg-2">
+                            <div class="form-group">
+                                <label for="txtRemark">หมายเหตุ:</label>
+                                <input type="text" id="txtRemark" class="form-control" placeholder="" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-4 col-sm-3 col-lg-2">
+                            <div class="form-group">
+                                <input type="file" name="photo" id="photo" onchange="readURL(this);" style="color:transparent;">
+                                <div class="imgpreview"><img id="imgPreview" alt="your image" class="img-responsive" /></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="table-responsive">
+                            <div class="col-xs-4 col-sm-3 col-lg-2">
+                                <div class="form-group">
+                                    <input type="file" id="FileUpload1" multiple />
+                                    <table class="example-2" cellspacing="0">
+                                        <thead class="theader">
+                                            <tr>
+                                                <th>No.</th>
+                                                <th>File Name</th>
+                                                <th class="hidecolumn">Path Name</th>
+                                            </tr>
+                                        </thead>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-4 col-sm-3 col-lg-2">
+                            <div class="form-group">
+                                <button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'Products', 0)">Save</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 </form>
-    }
-    @*//===================================================================CSS w3school*@
-</div>
+            }
+            @*//===================================================================CSS w3school*@
+        </div>
 <script type="text/javascript">
     $(document).ready(function () {
         CheckAuthorization();       
